@@ -22,6 +22,8 @@
 #   Splits the boss bar into 6 segments
 #SOLID
 #   The bar is one solid piece
+ExploitFix:
+    EndermanEndermiteFarms: true
 Experience_Bars:
     # Turn this to false if you wanna disable XP bars
     Enable: true
