@@ -8,13 +8,14 @@ Key:
   - Removal
 
 Version 2.1.4
-    Removed XP from entities that target endermite to prevent easy exploitation (Credits to BentoBox for the tip!)
+    Removed XP from entities that target endermite to prevent easy exploitation (Credits to TheBentoBox for the tip!) [Can be turned off in experience.yml]
     Fixed a bug where static chance skills like Arcane Salvage were using incorrect calculations for success
     Advanced Salvage now uses a rank system
     Arcane Salvage now goes by your rank to determine the maximum amount of materials salvaged and is no longer percentage based
     Fixed a bug where Iron Arm was checking for Iron Grip to be unlocked instead of itself
     (Plugin Compatibility) mcMMO now ignores cancelled events relating to the player left or right clicking
     (Locale) Changed the string for "Salvage.Ability.Bonus.1" to fit the new material recovery mechanics of Salvage
+    (Config) Added a toggle for the new endermite enderman xp farm fix in experience.yml "ExploitFix.EndermanEndermiteFarms"
     (Config) Cleaned up some leftover 'unlocklevel' settings, this stuff is now handled in skillranks.yml
     (Config) Removed Salvage.MaxPercentage
     (Config) Removed Salvage.MaxPercentageChance
